Fix TimerDisplay alignment.

--- a/src/App/GuildWars/Timer/Timer.scss
+++ b/src/App/GuildWars/Timer/Timer.scss
@@ -1,6 +1,4 @@
-@import '@styles/Accessibility.scss';
 @import '@styles/Animation.scss';
-@import '@styles/Typography.scss';
 @import '@styles/Color.scss';
 
 .Timer {
@@ -24,56 +22,20 @@
   }
 
   &.Expired {
-    // composes: Blink from '@styles/Animation.scss';
     @include ErrorColor;
     @include Blink;
   }
 
-  abbr {
-    text-decoration: none;
+  .Display {
+    content: '';
   }
 
-  .Elapsed {
-    @include Monospace;
-    align-items: baseline;
-    display: flex;
-
-    .Minutes {
-      font-size: 3rem;
-    }
-
-    .Seconds {
-      font-size: 2rem;
-      margin: 0 0 0 0.5rem;
-    }
-
-    span {
-      font-size: 1rem;
-    }
+  .Control {
+    content: '';
   }
 
-  .Controls {
-    button {
-      background-color: transparent;
-      border: 0;
-      margin: 0 0 0 1rem;
-      min-height: 2.75rem;
-      min-width: 2.75rem;
-      padding: 0;
-
-      &:first-child {
-        margin-left: 0;
-      }
-
-      svg {
-        height: 2.75rem;
-        width: 2.75rem;
-      }
-    }
-  }
-
-  .Controls + .Elapsed,
-  .Elapsed + .Controls {
-    margin-left: 1rem;
+  .Control + .Display,
+  .Display + .Control {
+    margin-left: 0.5rem;
   }
 }
