--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -2,10 +2,6 @@
   border-bottom: 1px solid red;
   width: 100vw;
 
-  div {
-    padding: 0.125rem;
-  }
-
   @media screen and (min-width: 640px) {
     //320 x 2
     width: 50vw;
